# AVL-tree

./: .clang-format  CMakeLists.txt  README.md  report.md
.github/workflows/: build-and-lint.yml
Tests/: run_tests.sh
Tests/BonusTask/: List_expected_output.txt  Tree_test_commands.txt
Tests/BonusTask/SingleLinkedList/: TestSingleLinkedList.c
Tests/MainTask/: Tree_expected_output.txt  Tree_test_commands.txt
Tests/MainTask/AVL-Tree/: TestAVL-Tree.c
assets/: airports.txt  prepare.py
src/Benchmarks/: bench_avl.c  bench_list.c
src/BonusTask/: UtilitySingleLinkedList.c
src/BonusTask/SingleLinkedList/: SingleLinkedList.c  SingleLinkedList.h
src/MainTask/: UtilityAVLTree.c
src/MainTask/AVL-Tree/: AVL-Tree.c  AVL-Tree.h
